--- a/templates/interest.html
+++ b/templates/interest.html
@@ -2,50 +2,78 @@
 {% block content %}
 
 <div class="container">
+		<h3>Cooking!</h3>
+		<p class="largeView">Click to enlarge the picture!</p>
 	<div class="row">
 	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
-	        <img src="/static/IMG_2669.JPG" alt="...">
+	        <img src="/static/curry.jpg" alt="...">
 	    </a>
 	  </div>
 	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
-	      <img src="/static/IMG_2669.JPG" alt="...">
+	      <img src="/static/rice.jpg" alt="...">
 	    </a>
 	  </div>
 	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
-	      <img src="/static/IMG_2669.JPG" alt="...">
+	      <img src="/static/food3.jpg" alt="...">
 	    </a>
 	  </div>
 	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
-	      <img src="/static/IMG_2669.JPG" alt="...">
+	      <img src="/static/food4.jpg" alt="...">
+	    </a>
+	  </div>
+	 </div>
+
+
+
+		<h3>Sketching!</h3>
+		<p class="largeView">Click to enlarge the picture!</p>
+	<div class="row">
+	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
+		<a href="#" class="thumbnail">
+	      <img src="/static/painting1.jpg" alt="...">
 	    </a>
 	  </div>
 	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
-	      <img src="/static/IMG_2669.JPG" alt="...">
+	      <img src="/static/painting2.jpg" alt="...">
 	    </a>
 	  </div>
 	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
-	      <img src="/static/IMG_2669.JPG" alt="...">
+	      <img src="/static/painting3.jpg" alt="...">
 	    </a>
 	  </div>
 	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
-	      <img src="/static/IMG_2669.JPG" alt="...">
+	      <img src="/static/painting4.jpg" alt="...">
+	    </a>
+	  </div>
+	</div>
+	<h3>Photographing!</h3>
+	<p class="largeView">Click to enlarge the picture!</p>
+	  <div class="row">
+	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
+		<a href="#" class="thumbnail">
+	      <img src="/static/IMG_2941.JPG" alt="...">
 	    </a>
 	  </div>
 	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
-	      <img src="/static/IMG_2669.JPG" alt="...">
+	      <img src="/static/IMG_3091.jpg" alt="...">
 	    </a>
 	  </div>
 	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
-	      <img src="/static/IMG_2669.JPG" alt="...">
+	      <img src="/static/IMG_3096.jpg" alt="...">
+	    </a>
+	  </div>
+	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
+		<a href="#" class="thumbnail">
+	      <img src="/static/IMG_1178.jpg" alt="...">
 	    </a>
 	  </div>
 	  
