--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -7,48 +7,39 @@
 <div class="container">
 
     <ul class="timeline">
-        <li>
-          <!-- <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div> -->
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
-            </div>
-            <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-            </div>
-          </div>
-        </li>
         <li class="timeline-inverted">
           <!-- <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div> -->
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+              <h4 class="timeline-title">Ann Arbor</h4>
+              <h6>2015-</h6>
             </div>
             <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-              <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
+              <p>Now I'm studying in University od Michigan, Ann Arbor. Ann Arbor is a small town. Spend a few months here and you know everyone. But there are also many trademarks of the big city. People here are highly educated. I love Walking in Ann Arbor with my friends. We walk to see UMMA of art, walk to try different food, and walk to market for fresh products.</p>
+              <p>However, being a student in one of the most hard-working universities in America, I have to spend most of my time in duderstadt ...</p>
             </div>
           </div>
         </li>
         <li>
-          <!-- <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div> -->
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+              <h4 class="timeline-title">Intern, Hangzhou, China</h4>
+              <h6>Summer, 2014</h6>
             </div>
             <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              <p>In the summer of 2014, I applied for an internship and participated in practical work experiences with the State Grid Tonglu Electric Power Co., Ltd. This is where I interacted with practical operation of the dispatching communication, relay protection, monitor reception for power grid in the summer. During the internship, I worked with operators in the monitor and dispatching center adjusting threshold values of detection systems and attended a drill regarding potential electric issues in order to deal with summer emergencies. Additionally, I wrote reviews of a program that aims at preventing emergencies during the summer months when the electrical power is especially in need. The program includes a series of examinations and maintenance of transmission lines, transformers, and generators. </p>
             </div>
           </div>
         </li>
         <li class="timeline-inverted">
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+              <h4 class="timeline-title">Chicago</h4>
+              <h6>2013-2015</h6>
             </div>
             <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              <p>In the year of 2013, I continued my studies at Illinois Institute of Technology.No longer limited to power and energy, I was also able to be introduced to signals system and electronics.</p>
+              <p>Chicago is the third most populous city in the United States. The public transport is so convenient that you don't even need a car. The CTA is slow, but it will take you nearly everywhere. I love walking to the beach. It takes me only 15 mintes from where I live.</p>
             </div>
           </div>
         </li>
@@ -56,44 +47,36 @@
           <!-- <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div> -->
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+              <h4 class="timeline-title">Beijing</h4>
+              <h6>2011-2013</h6>
             </div>
             <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-              <hr>
-              <!-- <div class="btn-group">
-                <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-                  <i class="glyphicon glyphicon-cog"></i> <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                </ul>
-              </div> -->
+              <p>In 2011, I went to North China Electrical Power University in Beijing.</p>
+              <p>Beijing is indeed culturally enriching, you can find people making crafts, playing musical instruments and dancing in the streets. And you can always find some attraction in Beijing or suburbs that you haven't seen.</p>
             </div>
           </div>
         </li>
         <li>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+              <h4 class="timeline-title">Hangzhou</h4>
+              <h6>1993-2008</h6>
             </div>
             <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              <p>I was born and raised in Hangzhou until leaving for college. There is a saying, "under the heaven there is Suzhou and Hangzhou", which indicates that Hangzhou is reckoned a beautiful city long time ago.</p>
+              <p>The West Lake is fantastic, not only are all parks free to visitors, one can almost always find places with stunning beauty and peace around the Lake and the surrounding hiking trails-all within less than 30min from the city center, easily accessible by car, bus, bikes and on foot. The Lake and the hiking trails make weekend getaways so easy. If you are lucky enough to live close by the Lake, the you have the perfect morning run routes (10k for a big loop).</p>
+              <p>People in Hangzhou have a slower pace of life comparing to tier-1 cities like Beijing, Shanghai, and Shenzhen. Growing up it feels like I spent the majority of my weekends with my family members biking somewhere around the Lake.</p>
             </div>
           </div>
         </li>
         <li class="timeline-inverted">
-         <!--  <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div> -->
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+              <h4 class="timeline-title">Born</h4>
+              <h6>April, 1993</h6>
             </div>
             <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              <p>I was born on April 12, 1993.</p>
             </div>
           </div>
         </li>
