--- a/static/base.css
+++ b/static/base.css
@@ -1,6 +1,10 @@
 body{
-	background-image: url("/static/bkg.jpg");
+	background-image: url("/static/background.jpg");
 	background-attachment: fixed;
+}
+span > .title {
+	color: white;
+
 }
 .mobileView{
 	display:none;
@@ -13,10 +17,9 @@ body{
 	border: 0px;
 	background: rgba(0,0,0,0.4);
 }
-footer{
-	/*border: 2px solid white;*/
+.container{
+	color: #BEBDC3;
 }
-
 .name{
 	position:absolute;
 	margin-top: 10px;
@@ -48,7 +51,7 @@ footer{
 .jumbotron{
 	position: relative;
 	display: block;
-	background: url('/static/coverPhoto.jpg')no-repeat;
+	background: url('/static/cover.png')no-repeat;
 }
 .contactInfo{
 	display: inline;
@@ -86,7 +89,11 @@ footer{
 	/*margin-bottom: 0px;*/
 }
 
-@media (max-width: 890px){
+@media (max-width: 760px){
+	body{
+	background-image: url("/static/background.jpg");
+	background-attachment: fixed;
+	}
 	audio{
 		display: none;
 	}
@@ -156,12 +163,9 @@ footer{
 	    position: relative;
 	    min-height: 100%;
 	    max-width: 100% ;
-	    /*border: 4px solid purple;*/
-/*	    max-width: calc(100% - 0px)!important ;
-	    max-width: -webkit-calc(100% - 0px);
-	    max-width: -o-calc(100% - 10px);
-	    max-width: -moz-calc(100% - 10px);*/
-
+	}
+	.largeView{
+		display: none;
 	}
 	.panel-footer{
 		width: 140px;
@@ -201,9 +205,16 @@ footer{
 	
 }
 @media (max-width: 450px){
-		audio{
+	audio{
 		display: none;
-		}
+	}
+	body{
+		background-image: url("/static/background.jpg") fixed;
+		background-attachment: fixed;
+	}
+		.largeView{
+		display: none;
+	}
 	.mobileView{
 		display:block;
 		background-color: rgba(0,0,0,0.4);
@@ -223,12 +234,13 @@ footer{
 		border-radius: 0px;
 		margin-left: 10%;
 		margin-right: 10%;
-		background-color: rgba(0,0,0,0.8);
+		background-color: rgba(0, 0, 0, 0.3);
 	}
 	.dropdown-menu > li{
 		width:100%;
 		height: 45px;
 		margin:0px;
+		color: white;
 	}
 	.dropdown-menu > li> a{
 		display: inline-block;
@@ -236,6 +248,7 @@ footer{
 		height: 44px;
 		margin:0px;
 		padding-top:14px;
+		color: white;
 
 	}
 	.main_content{
@@ -307,9 +320,6 @@ footer{
 		margin-top: 10px;
 		margin-left: 0px;
 		display: inline;
-	}
-	.container{
-		/*border: 1px solid blue;*/
 	}
 
 }
@@ -388,36 +398,25 @@ footer{
 
 .expanded{
 	width:100%;
-	border: 3px solid red;
 }
 
 .scrollToTop{
-	background-color: rgba(0,0,0,0,7);
-	width: 30px;
-	position: absolute;
-	/*position: fixed; */
-
-}
-.scrollToTop{
-	width:180px; 
+	width:120px; 
 	height:40px;
 	padding:10px; 
 	text-align:center; 
-	color: white !important ;
-	background: whiteSmoke;
-	font-weight: bold;
-	color: #444;
-	text-decoration: none;
+	font-size: 15px;
+	color: #D7D7E5;
 	position:fixed;
-	top:75px;
-	right:40px;
+	top:100px;
+	right:0px;
+	border-top-left-radius: 15px;
+	border-bottom-left-radius: 15px;
 	display:none;
-	background: rgba(0,0,0,0.6) 0px 20px;
+	background: rgba(0,0,0,0.6);
 }
 .scrollToTop:hover{
 	text-decoration:none;
-}
-audio{
-	/*border: 3px solid yellow;*/
+	color: #E58BAB;
 }
 
