--- a/templates/base.html
+++ b/templates/base.html
@@ -17,11 +17,12 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-	  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 	<script type = "text/JavaScript" src ="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+	<link rel = "stylesheet" type="text/css" href="static/base.css">
 	<script type = "text/JavaScript">
 		$(function(){$('a').each(function(){
 				if($(this).prop("href") == window.location.href) {
@@ -69,10 +70,6 @@
 		  
 		});
 	</script>
-
-
-
-	<link rel = "stylesheet" type="text/css" href="static/base.css">
 
 
 </head>
@@ -139,13 +136,13 @@
 					<a href="#" class="icon-button instagram"><i class="fa fa-instagram"></i><span></span></a>
 				</div>
 				<div class="icon">
-					<a href="#" class="icon-button weibo"><i class="fa fa-weibo"></i><span></span></a>
+					<a href="http://weibo.com/u/2255731994/home?topnav=1&wvr=6" class="icon-button weibo"><i class="fa fa-weibo"></i><span></span></a>
 				</div>
 				<div class="icon">
-					<a href="#" class="icon-button github"><i class="fa fa-github"></i><span></span></a>
+					<a href="https://github.com/MengtianXu/539_Portfolio" class="icon-button github"><i class="fa fa-github"></i><span></span></a>
 				</div>
 				<div class="icon">
-					<a href="#" class="icon-button facebook"><i class="fa fa-facebook"></i><span></span></a>
+					<a href="https://www.facebook.com/home.php?ref=wizard" class="icon-button facebook"><i class="fa fa-facebook"></i><span></span></a>
 				</div>
 			</div>
 			<div class="copyright">
